k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixel-positions-service
  namespace: tomemming
spec:
  selector:
    app: pixel-positions
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
