k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixel-positions-ingress
  namespace: pixel-positions
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pixel.tomemming.nl
  rules:
    - host: pixel.tomemming.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixel-positions-service
                port:
                  number: 80
